# Campi-app

src/: docker-compose.yaml
src/api/: .dockerignore  .gitignore  Cargo.toml  Dockerfile
src/api/.cargo/: config.toml
src/api/migrations/2023-03-30-031714_create_users/: up.sql
src/api/migrations/2023-03-30-031821_create_stores/: up.sql
src/api/migrations/2023-03-30-032718_create_categories/: up.sql
src/api/migrations/2023-03-30-032724_create_products/: up.sql
src/api/prisma/: schema.prisma
src/api/src/: db.rs  main.rs  schema.rs
src/mysql-dump/: schema.sql
