[package]
name = "campi-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
diesel = {version = "1.4.4", features = ["mysql", "chrono"]}
chrono = "^0"
dotenv = "0.15.0"
serde = {version="^1"}
uuid = {version="^0.8", features=["v4"]}
env_logger = "0.8"
log = "^0.4"
strum_macros = "^0.24"
strum = {version = "^0.24", features=["derive"]}
derive_more = "^0.99"
serde_json = "1.0"